# jlens

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  CONTRIBUTING_CN.md  FINAL_PROGRESS_REPORT.md  FINAL_PROGRESS_REPORT_CN.md  FINAL_SUMMARY.md  FINAL_SUMMARY_CN.md  LICENSE  MCP_INSPECTOR_INTEGRATION_GUIDE.md  MCP_INSPECTOR_TEST_REPORT.md  PLAN_2_PROGRESS_REPORT.md  PLAN_2_PROGRESS_REPORT_CN.md  PROGRESS_REPORT.md  PROGRESS_REPORT_CN.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_CN.md  README.md  README_CN.md  TESTING.md  TESTING_CN.md  TEST_RESULTS.md  TEST_RESULTS_CN.md  iflow-mcp-config.json  iflow_mcp.md  package.json  plan.md  plan_CN.md  pom.xml  pyproject.toml
config/: iflow-mcp-config.json  mcp-inspector-config-v2.json  mcp-inspector-config.json
docs/: FINAL_PROGRESS_REPORT.md  FINAL_PROGRESS_REPORT_CN.md  FINAL_SUMMARY.md  FINAL_SUMMARY_CN.md  MCP_INSPECTOR_INTEGRATION_GUIDE.md  MCP_SERVER_TEST_PLAN.md  PLAN_2.md  PLAN_2_CN.md  PROGRESS_REPORT.md  PROGRESS_REPORT_CN.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_CN.md  README.md  README_CN.md  TESTING.md  TESTING_CN.md  iflow_mcp.md  iflow_mcp_CN.md
jlens_mcp_server/: main.py
reports/: FINAL_PROGRESS_REPORT.md  FINAL_PROGRESS_REPORT_CN.md  MCP_CLIENT_TEST_REPORT.md  MCP_CLIENT_TEST_REPORT_CN.md  MCP_INSPECTOR_STANDARDIZATION_REPORT.md  MCP_INSPECTOR_STANDARDIZATION_REPORT_CN.md  MCP_INSPECTOR_TEST_REPORT.md  MCP_SERVER_TEST_PLAN.md  MCP_SERVER_TEST_REPORT.md  TEST_RESULTS.md  TEST_RESULTS_CN.md
scripts/: test_integration_advanced.ps1  test_mcp_inspector.ps1  test_mcp_inspector_final.ps1  test_mcp_inspector_v2.ps1  (+1 more)
(+162 files in other folders)
