[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jlens-mcp-server"
version = "1.1.1"
description = "MCP server for inspecting Java classes and Maven dependencies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "bhxch"},
]
dependencies = []

[project.scripts]
jlens-mcp-server = "jlens_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["jlens_mcp_server"]
artifacts = [
    "jlens_mcp_server/*.jar",
]

[tool.hatch.build.targets.sdist]
include = [
    "jlens_mcp_server",
    "jlens_mcp_server/*.jar",
]
